--- a/MiniProject/pom.xml
+++ b/MiniProject/pom.xml
@@ -82,6 +82,17 @@
 					</execution>
 				</executions>
 			</plugin>
+					<plugin>
+						<!-- https://mvnreposistory.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.0.0-M5</version>
+    <configuration>
+		<suiteXmlFiles>
+			<suiteXmlFile>testng.xml</suiteXmlFile>
+		</suiteXmlFiles>
+	</configuration>
+		</plugin>
 		</plugins>
 	</build>
 
